Fix more Java 8 incompatibilities in tests (Path.of, Set.of, Map.of, LocalDate.EPOCH, InputStream.nullInputStream, record.setInstant, ProcessHandle, enquote methods)
Signed-off-by: samikshya-chand_data <samikshya.chand@databricks.com>