@@ -2,6 +2,7 @@
 // (net/hydromatic/sqllogictest/Main.java)
 package com.databricks.jdbc.sqllogictest;
 
+import com.google.common.collect.ImmutableSet;
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
@@ -33,7 +34,7 @@ public class SLTMain {
     }
     // TODO: Add these files once getTables allows fetching VIEW(s)
     Set<String> testFilesToSkip =
-        Set.of(
+        ImmutableSet.of(
             "sqllogictest/evidence/slt_lang_createview.test",
             "sqllogictest/evidence/slt_lang_dropview.test",
             "sqllogictest/index/view/100/slt_good_2.test");
