@@ -13,6 +13,7 @@ import com.databricks.jdbc.model.telemetry.TelemetryFrontendLog;
 import com.databricks.jdbc.model.telemetry.TelemetryResponse;
 import com.databricks.sdk.core.DatabricksConfig;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.util.concurrent.MoreExecutors;
 import java.util.Map;
 import java.util.Properties;
@@ -92,7 +93,7 @@ public class TelemetryClientTest {
       when(mockHttpResponse.getStatusLine()).thenReturn(mockStatusLine);
       when(mockStatusLine.getStatusCode()).thenReturn(200);
 
-      Map<String, String> headers = Map.of(HttpHeaders.AUTHORIZATION, "token");
+      Map<String, String> headers = ImmutableMap.of(HttpHeaders.AUTHORIZATION, "token");
       when(databricksConfig.authenticate()).thenReturn(headers);
       TelemetryResponse response = new TelemetryResponse().setNumSuccess(2L).setNumProtoSuccess(2L);
       when(mockHttpResponse.getEntity())
@@ -167,7 +168,7 @@ public class TelemetryClientTest {
       when(mockHttpResponse.getEntity())
           .thenReturn(new StringEntity(new ObjectMapper().writeValueAsString(response)));
 
-      Map<String, String> headers = Map.of(HttpHeaders.AUTHORIZATION, "token");
+      Map<String, String> headers = ImmutableMap.of(HttpHeaders.AUTHORIZATION, "token");
       when(databricksConfig.authenticate()).thenReturn(headers);
 
       // JDBC URL with 2 seconds flush interval
